--- a/Day1/01_Pytorch_Basics/01_Pytorch_Basics.ipynb
+++ b/Day1/01_Pytorch_Basics/01_Pytorch_Basics.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -17,7 +19,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# 01. Pytorch Basics\n",
     "\n",
@@ -37,32 +42,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 0. Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "import torch\n",
-       "import numpy as np"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Latex object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np"
@@ -70,7 +66,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## 1. 텐서(Tensors)\n",
     "\n",
@@ -81,7 +80,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 1.1 텐서를 생성하는 여러가지 방법들"
    ]
@@ -90,7 +92,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -189,7 +193,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "이외에도, 여러가지 방법으로 텐서를 생성해 낼 수 있습니다.\n",
     "\n",
@@ -198,7 +205,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 1.2 텐서 indexing, slicing\n",
     "\n",
@@ -209,7 +219,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -302,16 +314,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### 1.3 텐서 operation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -319,57 +337,57 @@
      "output_type": "stream",
      "text": [
       "Original A :  \n",
-      "-1.7592 -0.4082\n",
-      "-0.4311 -0.5325\n",
+      " 1.4146 -0.8919\n",
+      " 0.7487  0.0835\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "Original B :  \n",
-      "-1.4949  0.0968\n",
-      " 1.1076  0.5714\n",
+      " 1.9135  0.2759\n",
+      " 1.8454 -0.3166\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "Added tensor :  \n",
-      "-3.2540 -0.3114\n",
-      " 0.6764  0.0390\n",
+      " 3.3280 -0.6160\n",
+      " 2.5941 -0.2331\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "clamp_tensor :  \n",
-      "-0.5000 -0.4082\n",
-      "-0.4311 -0.5000\n",
+      " 0.5000 -0.5000\n",
+      " 0.5000  0.0835\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "divide_by_const_tensor :  \n",
-      "-0.8796 -0.2041\n",
-      "-0.2156 -0.2662\n",
+      " 0.7073 -0.4460\n",
+      " 0.3744  0.0417\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "divide_by_tensor :  \n",
-      " 1.1768 -4.2175\n",
-      "-0.3893 -0.9318\n",
+      " 0.7393 -3.2324\n",
+      " 0.4057 -0.2637\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "mul_by_const_tensor :  \n",
-      "-17.5916  -4.0818\n",
-      " -4.3114  -5.3247\n",
+      " 14.1455  -8.9193\n",
+      "  7.4874   0.8350\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "mul_by_tensor :  \n",
-      " 2.6297 -0.0395\n",
-      "-0.4775 -0.3043\n",
+      " 2.7067 -0.2461\n",
+      " 1.3817 -0.0264\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "matrix_multiplication :  \n",
-      " 2.1776 -0.4035\n",
-      " 0.0547 -0.3460\n",
+      " 1.0608  0.6727\n",
+      " 1.5868  0.1802\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
       "sigmoid_tensor :  \n",
-      " 0.1469  0.3993\n",
-      " 0.3939  0.3699\n",
+      " 0.8045  0.2907\n",
+      " 0.6789  0.5209\n",
       "[torch.FloatTensor of size 2x2]\n",
       "\n",
-      "sum_tensor :  -3.1309470534324646\n",
-      "Mean :  -0.7827367633581161 std : 0.6531836624473548\n"
+      "sum_tensor :  1.354855015873909\n",
+      "Mean :  0.33871375396847725 std : 0.9840674747249064\n"
      ]
     }
    ],
@@ -384,6 +402,8 @@
     "\n",
     "# element-wise tensor addition\n",
     "added_tensor = torch.add(A,B)\n",
+    "# or,\n",
+    "added_tensor_2 = A+B\n",
     "print(\"Added tensor : \",added_tensor)\n",
     "\n",
     "# Clamping tensor\n",
@@ -393,12 +413,16 @@
     "# Divide\n",
     "divide_by_const_tensor = torch.div(A,2)\n",
     "divide_by_tensor = torch.div(A,B)\n",
+    "# or,\n",
+    "devied_by_tensor_2 = A/B\n",
     "print(\"divide_by_const_tensor : \",divide_by_const_tensor)\n",
     "print(\"divide_by_tensor : \",divide_by_tensor)\n",
     "\n",
     "# Element-wise multiplication\n",
     "mul_by_const_tensor = torch.mul(A,10)\n",
     "mul_by_tensor = torch.mul(A,B)\n",
+    "# or,\n",
+    "mul_by_tensor = A*B\n",
     "print(\"mul_by_const_tensor : \",mul_by_const_tensor)\n",
     "print(\"mul_by_tensor : \",mul_by_tensor)\n",
     "\n",
@@ -420,7 +444,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "이외에도 많은 텐서 연산 함수가 정의되어 있습니다. 어떤 함수가 정의되어 있는지 한 번씩 훑어본다면 나중에 도움이 될 수 있습니다. \n",
     "\n",
@@ -429,13 +456,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "### Q1.\n",
+    "### Q1. Implement logistic regression function\n",
     "\n",
-    "임의의 행렬 $$ \\\n",
+    "로지스틱 회귀모델(Logistic regression model)에서, 입력 $X\\in \\mathbf{R}^{d}$와 모델 파라미터 $W \\in \\mathbf{R}^{d}$가 주어질 때, 입력이 특정 Class에 속할 확률을 표현할 수 있는 함수 $h(x)$를 Pytorch Tensor를 입력으로 받도록 정의해봅시다.\n",
     "\n",
-    "$$c = \\sqrt{a^2 + b^2}$$\n"
+    "$ h(X) = \\frac{1}{1+exp(-X^{T}W)}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def logistic_reg_func(X, W):\n",
+    "    # X ; input tensor \n",
+    "    # W ; model weight tensor\n",
+    "    \n",
+    "    X_transpose = torch.t(X)\n",
+    "    X_txW = torch.mm(X_transpose,W)\n",
+    "    exp = torch.exp(X_txW)\n",
+    "    h_x = 1/(1+exp)\n",
+    "    \n",
+    "    return h_x"
    ]
   },
   {
@@ -445,7 +497,13 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "X = torch.randn(10,1)\n",
+    "\n",
+    "W = torch.randn(10,1)\n",
+    "\n",
+    "print(logistic_reg_func(X,W))"
+   ]
   }
  ],
  "metadata": {
