--- a/Day1/04_Feed-forward_neural_network/Perceptron_Widrow_Hoff-SGD.ipynb
+++ b/Day1/04_Feed-forward_neural_network/Perceptron_Widrow_Hoff-SGD.ipynb
@@ -285,8 +285,8 @@
     "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
     "    \n",
     "    # plot the decision surface\n",
-    "    x1_min, x1_max = X[:,0].min() - 1, X[:,0].max()+1\n",
-    "    x2_min, x2_max = X[:,1].min() - 1, X[:,1].max()+1\n",
+    "    x1_min, x1_max = X[:,0].min()-1, X[:,0].max()+1\n",
+    "    x2_min, x2_max = X[:,1].min()-1, X[:,1].max()+1\n",
     "    \n",
     "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution), np.arange(x2_min, x2_max, resolution))\n",
     "    Z = classifier.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
